[gd_scene load_steps=6 format=3 uid="uid://j0jrwjacaxll"]

[ext_resource type="Script" path="res://UI/PauseMenu/btn_save.gd" id="1_1ps8v"]
[ext_resource type="Script" path="res://UI/PauseMenu/pause_menu.gd" id="1_57k5h"]
[ext_resource type="Script" path="res://UI/PauseMenu/btn_close_menu.gd" id="2_cwlq4"]
[ext_resource type="Script" path="res://UI/PauseMenu/btn_load.gd" id="2_w3kia"]
[ext_resource type="Script" path="res://UI/PauseMenu/btn_quit.gd" id="3_nch2u"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_57k5h")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Menu"
horizontal_alignment = 1

[node name="ButtonCloseMenu" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
text = "Resume"
script = ExtResource("2_cwlq4")

[node name="ButtonSave" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
text = "Save"
script = ExtResource("1_1ps8v")

[node name="ButtonLoad" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
text = "Load"
script = ExtResource("2_w3kia")

[node name="ButtonQuit" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
text = "Quit"
script = ExtResource("3_nch2u")

[node name="LabelGold" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Gold: "
horizontal_alignment = 1

[node name="LabelRep" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Reputation: "
horizontal_alignment = 1

[node name="LabelRepXp" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Reputation XP: "
horizontal_alignment = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/ButtonCloseMenu" to="CenterContainer/PanelContainer/VBoxContainer/ButtonCloseMenu" method="_on_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/ButtonSave" to="CenterContainer/PanelContainer/VBoxContainer/ButtonSave" method="_on_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/ButtonLoad" to="CenterContainer/PanelContainer/VBoxContainer/ButtonLoad" method="_on_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/ButtonQuit" to="CenterContainer/PanelContainer/VBoxContainer/ButtonQuit" method="_on_pressed"]
